Fixing post layout for author info

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,23 +2,18 @@
 layout: default
 ---
 
-<article class="post">
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
     <h2 class="post-title" itemprop="name headline">{{ page.title | escape }}</h2>
-      <div class="post-meta">
-        {% if page.author %}
-          <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-            <span itemprop="name">
-              {% for person in site.people %}
-              {% if person.name == page.author %}
-              <a href="{{ site.baseurl }}{{ person.url }}">{{ page.author }}</a>
-              {% endif %}
-              {% endfor %}
-            </span>
-          </span>
-          {% endif %}
-      </div>
+    <p class="post-meta"> By
+    {% if page.author %}<span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">
+    {% for person in site.people %}
+    {% if person.name == page.author %}
+    <a href="{{ site.baseurl }}{{ person.url }}">{{ page.author }}</a>
+    {% endif %}
+    {% endfor %}
+    </span></span></p>
   </header>
 
   <div class="entry">
