--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,8 @@ layout: default
     <a href="{{ site.baseurl }}{{ person.url }}">{{ page.author }}</a>
     {% endif %}
     {% endfor %}
-    </span></span></p>
+    </span></span>
+    {% endif %}</p>
   </header>
 
   <div class="entry">
