--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,20 +16,18 @@
   </head>
 
   <body>
+
+    {% include sidebar.html %}
+
     <div class="wrapper-masthead">
       <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <a href="{{ site.baseurl }}/" class="site-banner"><img src="{{ site.banner }}" /></a>
 
+        <header class="masthead clearfix">
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
-
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
         </header>
       </div>
     </div>
@@ -47,5 +45,8 @@
     </div>
 
     {% include analytics.html %}
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+
+    <script src='{{ site.baseurl}}/script.js'></script>
   </body>
 </html>
