--- a/style.scss
+++ b/style.scss
@@ -178,11 +178,9 @@ img {
   }
 }
 
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
+.site-banner {
+  float: none;
+  width: 100%;
 
   @include mobile {
     float: none;
@@ -302,3 +300,4 @@ footer {
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
 @import "svg-icons";
+@import "sidebar";
