--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,9 @@
     {% include sidebar.html %}
 
     <div class="wrapper-masthead">
-      <div class="container">
+      <div class="banner-container">
           <a href="{{ site.baseurl }}/" class="site-banner"><img src="{{ site.banner }}" /></a>
+      </div>
 
         <header class="masthead clearfix">
           <div class="site-info">
@@ -32,8 +33,10 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">
+    <div class="wrap">
+      <div id="main" role="main" class="container">
       {{ content }}
+      </div>
     </div>
 
     <div class="wrapper-footer">
