--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,11 @@
 /* BASE RULES */
 /**************/
 
+.wrap {
+  position: relative;
+  width: 100%;
+}
+
 html {
   font-size: 100%;
 }
@@ -25,7 +30,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
+  max-width: 900px;
   padding: 0 10px;
   width: 100%;
 }
@@ -178,9 +183,14 @@ img {
   }
 }
 
+.banner-container {
+  margin: 0px auto;
+  max-width: 1600px;
+  width: 100%
+}
+
 .site-banner {
   float: none;
-  width: 100%;
 
   @include mobile {
     float: none;
@@ -223,32 +233,6 @@ img {
   }
 }
 
-nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
-  font-size: 18px;
-
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
-
-  a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
-
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
-    }
-  }
-}
 
 //
 // .main
