--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,16 +20,18 @@
     {% include sidebar.html %}
 
     <div class="wrapper-masthead">
-      <div class="banner-container">
-          <a href="{{ site.baseurl }}/" class="site-banner"><img src="{{ site.banner }}" /></a>
-      </div>
 
-        <header class="masthead clearfix">
+      <header class="masthead clearfix">
+        <div class="container">
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
-        </header>
+        </div>
+      </header>
+
+      <div class="banner-container">
+          <a href="{{ site.baseurl }}/" class="site-banner"><img src="{{ site.banner }}" /></a>
       </div>
     </div>
 
