Fixed bad color in sidebar css

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -95,7 +95,7 @@ a.sidebar-nav-item:focus {
 #sidebar-checkbox:focus ~ .sidebar-toggle,
 #sidebar-checkbox:checked ~ .sidebar-toggle {
   color: #fff;
-  background-color: $333;
+  background-color: #333;
 }
 
 .sidebar-toggle:active:before,
