Sidebar nav edits

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,8 +5,8 @@
 
   <nav class="sidebar-nav">
     <h2>
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/">HOME</a>
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/about">ABOUT</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/">Home</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/about">About</a>
     </h2>
   </nav>
 
