Building the site

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,10 @@
   <nav class="sidebar-nav">
     <h2>
     <a class="sidebar-nav-item" href="{{ site.baseurl }}/">Home</a>
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/about">About</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/schedule">Schedule</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/assignments">Assignments</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/policies">Policies</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/tutorial">Tutorials</a>
     </h2>
   </nav>
 
