--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,7 @@ body {
 	background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  font-weight: 300;
 }
 
 .container {
@@ -78,6 +79,7 @@ p {
 a {
   color: $blue;
   text-decoration: none;
+  font-weight: bold;
 	cursor: pointer;
   &:hover, &:active {
     color: $blue;
@@ -215,7 +217,7 @@ img {
   color: $darkGray;
   cursor: pointer;
   font-family: $helveticaNeue;
-  font-size: 28px;
+  font-size: 36px;
   letter-spacing: 1px;
 }
 
@@ -223,6 +225,7 @@ img {
   margin: -5px 0 0 0;
   color: $gray;
   font-size: 16px;
+  font-weight: lighter;
 
   @include mobile {
     margin: 3px 0;
